--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 
 # testing
 /coverage
@@ -21,8 +21,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+
 TODO
-.idea
+.idea/
 __pycache__
 venv/
 db.sqlite3
